add the rest of the menu

--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
 <body>
     <header>
         <h1>Spooky Halloween Party Signup</h1>
+          <ul class="nav-bar">
+              <li>
+                  <a href="#signup">Attend</a>
+              </li>
+              <li>
+                  <a href="#event-date-label">About</a>
+              </li>
+              <li>
+                  <a href="mailto:someone@example.com">Contact</a>
+              </li>
+          </ul>
+      </nav>
     </header>
-    <img src="./assets/pumpkin.png" alt="Carved Pumpkin" id="pumpkin-image">
-    
-    <h2 id="event-date-label">Oct 31st, 2023... too scared?</h2>
 
-    <section class="signup">
+    <img src="./assets/pumpkin.png" alt="Carved Pumpkin" id="pumpkin-image" title="Boo."/>
+    <h2 class="hidden-caption">Boo!</h2>
+
+    <h2 id="event-date-label">Oct 31st, 2023... or ya too scared?</h2>
+
+    <section id="signup" class="signup">
       <form action="action_page.php">
         <input type="text" placeholder="Your name..">
         <input type="text" placeholder="Email..">
@@ -24,9 +38,9 @@
     </section>
     
     <footer>
-      <h2>Made by Fritz "Frights" Huie</h2>
+      <h2>Made by "Frights" Huie</h2>
       <p>
-          &copy; 2023 Fritz Huie
+          2023 - Fritz Huie
       </p>
   </footer>
 </body>
